--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -115,6 +115,7 @@ library
     build-depends:
         authenticate-oauth >= 1.6,
         base >=4 && <5,
+        cryptonite,
         yesod >=1.4.3,
         yesod-core >=1.4.17,
         yesod-auth >=1.4.17,
@@ -125,6 +126,8 @@ library
         mime-mail >=0.4,
         transformers >=0.4.2.0,
         ldap-client >=0.1.0,
+        luci-connect -any,
+        lens -any,
         classy-prelude >=0.10.2,
         classy-prelude-conduit >=0.10.2,
         classy-prelude-yesod >=0.10.2,
