--- a/apps/hs/qua-server/stack.yaml
+++ b/apps/hs/qua-server/stack.yaml
@@ -11,7 +11,7 @@ extra-deps:
 flags: {}
 packages:
   - .
-
+  - ../../../libs/hs/luci-connect
 resolver: lts-8.21
 require-stack-version: ">= 1.1.0"
 extra-package-dbs: []
