--- a/apps/hs/helen/helen.cabal
+++ b/apps/hs/helen/helen.cabal
@@ -20,6 +20,8 @@ author: Artem Chirkin
 library
     exposed-modules:
         Helen.Core
+        Helen.Core.OptParse
+        Helen.Core.OptParse.Types
         Helen.Core.Auth
         Helen.Core.Service
         Helen.Core.Service.Startup
@@ -53,7 +55,8 @@ library
         path-io -any,
         yaml -any,
         process -any,
-        iproute -any
+        iproute -any,
+        optparse-applicative
     default-language: Haskell2010
     hs-source-dirs: src
     ghc-options: -Wall -ferror-spans
