--- a/apps/hs/qua-server/qua-server.cabal
+++ b/apps/hs/qua-server/qua-server.cabal
@@ -159,7 +159,8 @@ library
         resource-pool -any,
         filepath >=1.4,
         qua-types >= 0.1,
-        regex -any
+        regex -any,
+        network -any
     default-language: Haskell2010
     default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                         NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
